k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: charemma-web
spec:
  selector:
    app: charemma-web
  ports:
    - port: 80
      targetPort: 80
