k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: charemma-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: charemma.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: charemma-web
                port:
                  number: 80
    - host: www.charemma.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: charemma-web
                port:
                  number: 80
  tls:
    - hosts:
        - charemma.de
        - www.charemma.de
